Template optimization V3
